Fix for footer on mobile and some wrapping

--- a/paxterra/client/src/global.css
+++ b/paxterra/client/src/global.css
@@ -52,6 +52,6 @@ h3 {
 
 @media (max-width: 768px) {
   :root {
-    --header-height: 80px;
+    --header-height: 100px;
   }
 }
